--- a/Views/DestinationPortals/Index.cshtml
+++ b/Views/DestinationPortals/Index.cshtml
@@ -2,6 +2,7 @@
     ViewData["Title"] = "درگاه های مقصد";
     Layout = null;
 }
+    <div id="r_title">درگاه های مقصد</div>
 <div id="page_box">
     <div data-bind="foreach: portals">
         <div class="r_row">
