--- a/Views/PersonalPortal/Index.cshtml
+++ b/Views/PersonalPortal/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
-    ViewData["Title"] = "درگاه های شخصی";
     Layout = null;
 }
+<div id="r_title">درگاه های شخصی</div>
 <div id="page_box">
     <div data-bind="foreach: portals">
         <div class="r_row">
