--- a/Views/DestinationPortals/PayReturn.cshtml
+++ b/Views/DestinationPortals/PayReturn.cshtml
@@ -1,5 +1,4 @@
-﻿@model DestinationPortalModel
-@using Newtonsoft.Json;
+﻿ّ@using Newtonsoft.Json;
 @{
     Layout = null;
 }
@@ -36,7 +35,7 @@
                         margin: 0;
                         padding: 0;
                         height: 100%;
-                        background: #7E57C2  !important;
+                        background: #7E57C2 !important;
                     }
 
                     .user_card {
@@ -48,38 +47,30 @@
                     }
                 </style>
                 <div id="login_form">
-                    <form id="pay_form" action="/DestinationPortals/Pay/@Model.Id" method="post">
-                        <div id="login_form_box" class="justify-content-center form_container">
+                    <div id="login_form_box" class="justify-content-center form_container">
+                        @if (ViewBag.OK == "OK")
+                        {
 
-
-                            <div class="" style="width:250px;margin:auto;">
-                                <div style="width:100%;">مبلغ</div>
-                                <input type="text" id="Price" name="Price" class="form-control "
-                                       maxlength="10" style="text-align:right;margin-top:5px;" placeholder="ریال">
-                            </div>
-                            <div style="height:20px;"></div>
                             <div style="width:250px;margin:auto;">
-                                <div>عنوان</div>
                                 <div>
-                                    <h5>
-                                        @Model.Title
-                                    </h5>
+                                    <h3>
+                                        پرداخت با موفقیت انجام شد
+                                    </h3>
                                 </div>
                             </div>
-                        </div>
-                        <div class="d-flex justify-content-center mt-3 login_container">
-                            <button type="submit" class="btn btn-success">پرداخت</button>
-                        </div>
-                    </form>
-                    <script>
-                        $("#pay_form").submit(function () {
-                            var data = @(Html.Raw(JsonConvert.SerializeObject(Model)));
-                            if (!data.Price && !$("#Price").val()) {
-                                notify('خطا', 'لطفا مبلغ را وارد نمایید!', 'error');
-                                return false;
-                            }
-                        });
-                    </script>
+                        }
+                        else
+                        {
+                            <div style="width:250px;margin:auto;">
+                                <div>
+                                    <h3>
+                                        پرداخت با موفقیت انجام نشد
+                                    </h3>
+                                </div>
+                            </div>
+                        }
+
+                    </div>
                 </div>
 
             </div>
