--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -14,56 +14,48 @@
     <div data-bind="visible: stepOneVisible">
         <div id="login_form_box" class="justify-content-center form_container">
             <div style="text-align: center;margin-bottom: 10px;">لطفا شماره موبایل خود را وارد نمایید</div>
-            <div class="input-group mb-3" style="width:250px;margin:auto;">
-                <input type="text" data-bind="value: Phone" class="form-control input_user" maxlength="10">
-                <div class="input-group-append">
-                    <span id="no_holder" class="input-group-text">+98</span>
-                </div>
+            <div class="" style="width:250px;margin:auto;">
+                <input type="text" data-bind="value: Phone" class="form-control" maxlength="11" style="text-align:center;">
             </div>
         </div>
         <div class="d-flex justify-content-center mt-3 login_container" data-bind="loading: loading">
-            <button data-bind="click: sendStepone" class="btn login_btn">ارسال</button>
+            <button data-bind="click: sendStepone" class="btn btn-success">ارسال</button>
         </div>
     </div>
     <div data-bind="visible: stepTwoVisible">
         <div id="login_form_box" class="justify-content-center form_container">
             <div style="text-align: center;margin-bottom: 10px;">کد ارسال شده را وارد نمایید</div>
-            <div class="input-group mb-3" style="width:250px;margin:auto;">
-                <input type="text" data-bind="value: SecureCode" class="form-control input_user" maxlength="6"
+            <div class="" style="width:250px;margin:auto;">
+                <input type="text" data-bind="value: SecureCode" class="form-control" maxlength="6"
                        style="text-align:center;">
             </div>
         </div>
         <div class="d-flex justify-content-center mt-3 login_container" data-bind="loading: loading">
-            <button data-bind="click: sendSteptwo" class="btn login_btn">ارسال</button>
+            <button data-bind="click: sendSteptwo" class="btn btn-success">ارسال</button>
         </div>
     </div>
     <div data-bind="visible: stepRegisterVisible">
         <div id="login_form_box" class="justify-content-center form_container">
             <div style="text-align: center;margin-bottom: 10px;">لطفا کد ملی و نام کاربری خود را وارد نمایید</div>
-            <div class="input-group mb-3" style="width:250px;margin:auto;">
-                <div class="input-group-append">
-                    <span id="no_holder" class="input-group-text"> <i class="fa fa-id-card"></i> </span>
-                </div>
-                <input type="text" data-bind="value: NatCode" class="form-control input_user"
+            <div class="" style="width:250px;margin:auto;">
+                <input type="text" data-bind="value: NatCode" class="form-control "
                        maxlength="10" style="text-align:right;" placeholder="کد ملی">
             </div>
-            <div class="input-group mb-3" style="width:250px;margin:auto;">
-                <div class="input-group-append">
-                    <span id="no_holder" class="input-group-text"> <i class="fa fa-user"></i> </span>
-                </div>
-                <input type="text" data-bind="value: Username" class="form-control input_user"
+            <div class="" style="width:250px;margin:auto;">
+
+                <input type="text" data-bind="value: Username" class="form-control "
                        maxlength="10" style="text-align:right;" placeholder="نام کاربری">
             </div>
         </div>
         <div class="d-flex justify-content-center mt-3 login_container" data-bind="loading: loading">
-            <button data-bind="click: sendStepRegister" class="btn login_btn">ورود</button>
+            <button data-bind="click: sendStepRegister" class="btn btn-success">ورود</button>
         </div>
     </div>
 </div>
 <script>
     function formViewModel(defaultForm) {
         var self = this;
-        self.Phone = ko.observable(defaultForm.Phone).extend({ required: { message: 'شماره تماس را وارد نمایید!' } });
+        self.Phone = ko.observable(defaultForm.Phone);
         self.SecureCode = ko.observable(defaultForm.SecureCode);
         self.NatCode = ko.observable(defaultForm.NatCode);
         self.Username = ko.observable(defaultForm.Username);
@@ -73,13 +65,23 @@
         self.loading = ko.observable(defaultForm.loading);
 
         self.sendStepone = function (e) {
+            var reqJson = ko.toJS(self);
+            if (!reqJson.Phone) {
+                notify('', 'شماره موبایل را وارد نمایید!', 'error');
+                return;
+            }
+            //if (!/(\+989|9|09)(12|19|35|36|37|38|39|32)\d{7}/.test(reqJson.Phone)) {
+            //    notify('', 'شماره موبایل وارد شده صحیح نمیباشد!', 'error');
+            //    return;
+            //}
             $.ajax({
                 url: '/Login/StepOne',
                 method: 'POST',
                 data: ko.toJSON(self),
-                contentType:'application/json',
+                contentType: 'application/json',
                 beforeSend: function () { self.loading(true); },
                 success: function (data) {
+                    notify('', 'کد اعتبار سنجی برای شماره موبایل' + reqJson.Phone + ' با موفقیت ارسال شد.', 'success')
                     self.stepOneVisible(false);
                     self.stepTwoVisible(true);
                 },
@@ -87,13 +89,26 @@
             });
         };
         self.sendSteptwo = function (e) {
+            var reqJson = ko.toJS(self);
+            if (!reqJson.SecureCode) {
+                notify('', 'کد اعتبار سنجی را وارد نمایید!', 'error');
+                return;
+            }
+            if (!/^[0-9]{6,6}$/.test(reqJson.SecureCode)) {
+                notify('', 'کد اعتبار سنجی میبایست 6 رقمی و بصورت عددی باشد!', 'error');
+                return;
+            }
             $.ajax({
                 url: '/Login/StepTwo',
                 method: 'POST',
                 data: ko.toJSON(self),
-                contentType:'application/json',
+                contentType: 'application/json',
                 beforeSend: function () { self.loading(true); },
                 success: function (data) {
+                    if (data && data.IsInvalid) {
+                        notify('', 'کد اعتبار سنجی وارد شده صحیح نمیباشد!', 'error');
+                        return;
+                    }
                     if (data && data.hash) {
                         location.href = "/";
                         return;
@@ -105,6 +120,20 @@
             });
         };
         self.sendStepRegister = function (e) {
+            var reqJson = ko.toJS(self);
+            if (!reqJson.NatCode) {
+                notify('', 'کد ملی را وارد نمایید!', 'error');
+                return;
+            }
+            if (!isValidIranianNationalCode(reqJson.NatCode)) {
+                notify('', 'کد ملی اشتباه است!', 'error');
+                return;
+            }
+            var reqJson = ko.toJS(self);
+            if (!reqJson.Username) {
+                notify('', 'نام کاربری را وارد نمایید!', 'error');
+                return;
+            }
             $.ajax({
                 url: '/Login/Register',
                 method: 'POST',
