--- a/Views/PersonalPortal/Pay.cshtml
+++ b/Views/PersonalPortal/Pay.cshtml
@@ -27,7 +27,7 @@
             <div class="user_card">
                 <div class="d-flex justify-content-center">
                     <div class="brand_logo_container">
-                        <img src="~/images/logo.png" class="brand_logo" alt="Logo">
+                        <img src="~/images/logo.svg" class="brand_logo" alt="Logo">
                     </div>
                 </div>
                 <style>
