--- a/Views/Shared/_LoginLayout.cshtml
+++ b/Views/Shared/_LoginLayout.cshtml
@@ -11,6 +11,7 @@
     <link href="~/lib/fontawesome/css/all.min.css" rel="stylesheet" />
     <link href="~/lib/pNotify/pnotify.custom.min.css" rel="stylesheet" />
     <link href="~/css/site.css" rel="stylesheet" />
+    <link href="~/lib/bootstrap/mdb.min.css" rel="stylesheet" />
 
     <script src="~/lib/jquery/jquery-3.4.1.min.js"></script>
     <script src="~/lib/knockout/knockout-3.4.2.js"></script>
@@ -26,7 +27,7 @@
             <div class="user_card">
                 <div class="d-flex justify-content-center">
                     <div class="brand_logo_container">
-                        <img src="~/images/logo.png" class="brand_logo" alt="Logo">
+                        <img src="~/images/logo.svg" class="brand_logo" alt="Logo">
                     </div>
                 </div>
                 @RenderBody()
